# llm4rec-pytorch-simple

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: PCA_降维步骤说明.md  RQVAE_原理说明.md  sas.md  wandb_guide.md
logs/train/runs/2025-12-08_16-40-34/.hydra/: config.yaml  hydra.yaml
logs/train/runs/2025-12-08_18-06-29/.hydra/: config.yaml  hydra.yaml
logs/train/runs/2025-12-08_20-00-10/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/train/runs/2025-12-08_20-22-45/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/train/runs/2025-12-10_00-50-53/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/train/runs/2025-12-10_00-53-37/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/train/runs/2025-12-10_00-54-00/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/train/runs/2025-12-10_13-45-17/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/train/runs/2025-12-10_13-45-24/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/train/runs/2025-12-11_16-15-21/.hydra/: hydra.yaml
logs/train/runs/2025-12-11_16-15-50/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/train/runs/2025-12-12_00-51-23/.hydra/: hydra.yaml
logs/train/runs/2025-12-12_00-57-58/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/train/runs/2025-12-12_23-30-24/.hydra/: config.yaml  hydra.yaml  overrides.yaml
logs/train/runs/2025-12-12_23-30-24/wandb/: latest-run
logs/train/runs/2025-12-12_23-39-48/.hydra/: config.yaml  hydra.yaml
logs/train/runs/2025-12-12_23-39-48/wandb/: latest-run
logs/train/runs/2025-12-12_23-58-10/.hydra/: hydra.yaml
logs/train/runs/2025-12-12_23-58-10/wandb/: latest-run
logs/train/runs/2025-12-13_00-01-50/.hydra/: hydra.yaml
ml-1m/: precessdata.ipynb
ml-1m/data/: sasrec_format_by_user_test.csv
ml-1m/multimodal_datasets/: analyze_embeddings.ipynb  analyze_embeddings_detailed.ipynb  readme.md  text.csv
ml-1m/multimodal_datasets/embeddings_32d/: image_embeddings_32d.parquet  query_parquet_embeddings.py  text_embeddings_32d.parquet
ml-1m/multimodal_datasets/embeddings_50d/: image_embeddings_50d.parquet  text_embeddings_50d.parquet
ml-1m/multimodal_datasets/rqvae_results/: query_parquet_embeddings.py  rqvae_codes_concat.parquet  rqvae_codes_text.parquet  semantic_id_mapping_comprehensive_concat.json  semantic_id_mapping_concat.pkl  semantic_id_mapping_table_concat.csv  semantic_id_mapping_text.pkl  semantic_id_mapping_text_clean.pkl  semantic_id_mapping_tiger.pkl
ml-1m/processed/: movie_id_mapping.json  sasrec_format_global_test_data.csv  sasrec_format_user_id_test_data.csv  sasrec_format_user_test_data.csv
src/llm4rec_pytorch_simple/configs/: train.yaml
src/llm4rec_pytorch_simple/configs/callbacks/: default.yaml  rich_progress_bar.yaml
src/llm4rec_pytorch_simple/configs/data/: data_prepare.yaml  mnist.yaml  movielens.yaml  movielens_3884.yaml  movielens_v2.yaml
src/llm4rec_pytorch_simple/configs/hydra/: default.yaml
src/llm4rec_pytorch_simple/configs/logger/: wandb.yaml
src/llm4rec_pytorch_simple/configs/model/: HSTU.yaml  HSTU_SampleSoftmax.yaml  RQVAE.yaml  SASRec.yaml  TIGER.yaml  TIGER_Generative.yaml  encoders.yaml  mnist.yaml
src/llm4rec_pytorch_simple/configs/paths/: default.yaml
src/llm4rec_pytorch_simple/configs/trainer/: default.yaml
src/llm4rec_pytorch_simple/data/: _note.md  prepare_data.py  rec_dataset.py  rec_dataset_v2.py
src/llm4rec_pytorch_simple/models/: RQVAE_recommender.py  TIGERRetrievalModule.py  generative_recommenders.py  retrieval_module.py
src/llm4rec_pytorch_simple/models/archs/: HSTU.py  SASRec.py  TIGER.py  __init__.py  normalization.py  transformer_layers.py
src/llm4rec_pytorch_simple/models/data_components/: structures.py
src/llm4rec_pytorch_simple/models/embeddings/: __init__.py  embeddings.py  topk.py
src/llm4rec_pytorch_simple/models/losses/: README.md  losses.py
src/llm4rec_pytorch_simple/models/metrics/: metrics.py
src/llm4rec_pytorch_simple/models/negative_samples/: negative_samples.py
src/llm4rec_pytorch_simple/models/pre_processors/: positional-embedding.md  positional_emb.py
src/llm4rec_pytorch_simple/models/semantic_id/: README.md  USAGE.md  __init__.py  semantic_id_tokenizer.py
src/llm4rec_pytorch_simple/rqvae_module/: encoder.py  rqvae.py  train_rqvae.py
src/llm4rec_pytorch_simple/scripts/: eval.py  train.py
src/llm4rec_pytorch_simple/utils/: __init__.py  features.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py  wandb_utils.py
tests/: conftest.py  test_datamodules.py  test_eval.py  test_grad.py  test_train.py
(+62 files in other folders)
