[project]
name = "llm4rec-pytorch-simple"
version = "0.0.1"
description = "使用 pytorch 对一些 llm4rec 算法的复现,简单版本"
authors = [{ name = "yyds", email = "binbinyin19@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
dependencies = [
    # --------- pytorch --------- #
    "torch>=2.6.0",
    "torchvision>=0.20.0",
    "lightning>=2.4.0",
    "torchmetrics>=1.0.0",
    # --------- hydra --------- #
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "rich>=13.7.1",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.3.3",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://your-github-handle.github.io/llm4rec-pytorch-simple/"
Repository = "https://github.com/your-github-handle/llm4rec-pytorch-simple"
Documentation = "https://your-github-handle.github.io/llm4rec-pytorch-simple/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",



    "ruff>=0.11.5",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm4rec_pytorch_simple"]



[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Consider iterable unpacking instead of concatenation
    "RUF005",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
